--- a/ecommerceTSXClass/src/components/Mainslider/GalleriaDemo.css
+++ b/ecommerceTSXClass/src/components/Mainslider/GalleriaDemo.css
@@ -6,3 +6,6 @@
 .galleria-demo .custom-indicator-galleria .p-highlight .indicator-text {
     color: var(--primary-color);
 }
+.p-galleria-item-wrapper{
+    display: block !important;
+}
