--- a/ecommerceTSXClass/src/App.css
+++ b/ecommerceTSXClass/src/App.css
@@ -1,1 +1,11 @@
 
+
+.fontShowroom{
+    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica 25 UltraLight', sans-serif;
+    font-family: 'Helvetica 35 Thin', sans-serif;
+    font-family: 'Helvetica 45 Light', sans-serif;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    font-family: 'Helvetica 65 Medium', sans-serif;
+    }
+    
