--- a/ecommerceTSXClass/src/components/Navbar/Navbar.module.scss
+++ b/ecommerceTSXClass/src/components/Navbar/Navbar.module.scss
@@ -1,11 +1,9 @@
-.fontShowroom{
-font-family: 'Helvetica Neue', sans-serif;
-font-family: 'Helvetica 25 UltraLight', sans-serif;
-font-family: 'Helvetica 35 Thin', sans-serif;
-font-family: 'Helvetica 45 Light', sans-serif;
-font-family: 'Helvetica 55 Roman', sans-serif;
-font-family: 'Helvetica 65 Medium', sans-serif;
+html{
+
+    --height:112px;
+
 }
+
 .Navbar{
     font-family: 'Helvetica Neue', sans-serif !important;
     font-size: 19px !important;
@@ -14,18 +12,25 @@ font-family: 'Helvetica 65 Medium', sans-serif;
     border: none !important;
     position: absolute !important;
 width: 100%;
-    ul{
+ ul{
         flex: 1 !important;
         margin: 0 5% !important;
-      
+li{
+a{
+span{
+    color: #fff !important;
+}
+}
+}
     }
+    z-index: 10;
 }
 .navbarLogo{
     font-size:70px !important;
      font-weight:bold !important;
      flex:1;
      justify-content:center !important;
-     color:#000F08 !important;
+     color:#000 !important;
     a{
         justify-content: center !important;
     }
